# Prehistoric

./: CMakeLists.txt  Config.cpp  Config.h  Game.cpp  Game.h  main.cpp  stringutils.h
WorkingDirectory/: Settings.cfg
